--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,28 +19,24 @@
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-lg-5">
-        <h2 class="h4">All platforms supported</h2>
-        <p>Fully functional on iOS, Android, macos, Windows, Linux and Web</p>
+        <h2 class="h4">Available on all platforms</h2>
+        <p>iOS, Android, macos, Windows, Linux and web</p>
       </div>
       <div class="col-lg-5">
         <h2 class="h4">Editing</h2>
         <p>
-          <u>Undo/redo</u> and Markdown & system <u>shortcuts</u> functionalities nativement supported.
-          <u>Images</u> and <u>links</u> can be embedded as block elements or inline element.
-          <br>
-          Find out <a href="/demo" target="_blank"><strong>more</strong></a>.
+          <u>Markdown</u> sugar syntax.
+          <u>Images</u> and <u>links</u> can be embedded inline or as blocks.
         </p>
       </div>
       <div class="col-lg-5">
         <h2 class="h4">Formatting</h2>
         <p>
-          Text decorations include <strong>bold</strong>, <em>italic</em>, <s>strikethrough</s>,
+          Formatting include <strong>bold</strong>, <em>italic</em>, <s>strikethrough</s>,
           <u>underline</u> and
           <code>code</code>.
           <br>
-          Supports multi-level 1. ordered/ - unordered list and <input type="checkbox"></input> check list.
-          <br>
-          Find out <a href="/demo" target="_blank"><strong>more</strong></a>.
+          Supports multi-level ordered/unordered list and check list.
         </p>
       </div>
     </div>
@@ -48,13 +44,13 @@
       <div class="col-lg-5">
         <h2 class="h4">Convert</h2>
         <p>
-          <u>Markdown</u> & <u>HTML</u> documents can be encoded/decoded to editor's native document model
+          <u>Markdown</u> & <u>HTML</u> conversion provided
         </p>
       </div>
       <div class="col-lg-5">
         <h2 class="h4">Extensibility</h2>
         <p>
-          Custom embeds can be used as inline or block embeds
+          Custom widgets can be used as inline or block embeds
         </p>
       </div>
     </div>
